--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "informed": "^3.3.0",
     "materialize-css": "^1.0.0",
     "netlify-cli": "^2.12.0",
+    "node-sass": "^6.0.1",
     "nodemailer": "^6.4.2",
     "nodemailer-smtp-pool": "^2.8.3",
     "promise-polyfill": "^8.1.3",
