--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "informed": "^3.3.0",
     "materialize-css": "^1.0.0",
     "netlify-cli": "^2.12.0",
-    "node-sass": "^6.0.1",
+    "node-sass": "^4.14.0",
     "nodemailer": "^6.4.2",
     "nodemailer-smtp-pool": "^2.8.3",
     "promise-polyfill": "^8.1.3",
@@ -39,6 +39,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.1",
     "react-swipe": "^6.0.4",
+    "sass": "^1.44.0",
     "sendmail": "^1.6.1",
     "swipe-js-iso": "^2.1.5",
     "swiper": "^5.3.0",
@@ -48,7 +49,8 @@
     "start": "react-scripts start",
     "build": "CI=false && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "sass": "sass src/scss/:src/css/ --watch --no-source-map --style compact"
   },
   "eslintConfig": {
     "extends": [
